added class visully-hidden

--- a/portfolio.html
+++ b/portfolio.html
@@ -52,7 +52,7 @@
       <!-- Герой -->
       <section class="section portfolio-wrap">
         <div class="container">
-          <h1 class="hidden-title">Примеры работ</h1>
+          <h1 class="visually-hidden">Примеры работ</h1>
 
           <div class="bnt-container">
             <ul class="filter-items list">
