--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
       <!-- Преимущества -->
       <section class="section features">
         <div class="container">
-          <h2 class="hidden-title">Преимущества</h2>
+          <h2 class="visually-hidden">Преимущества</h2>
           <ul class="feature-list list">
             <li class="item item-list">
               <h3 class="title">Внимание к деталям</h3>
