--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <header class="header-wrap">
       <div class="container main-nav">
         <nav class="nav">
-          <a href="" class="logo"><span class="accent">Web</span>Studio</a>
+          <a href="" class="logo link"><span class="accent">Web</span>Studio</a>
 
           <ul class="site-nav list">
             <li class="item">
