changed centered hero-title by flex

--- a/index.html
+++ b/index.html
@@ -53,10 +53,9 @@
       <!-- Герой -->
       <section class="hero">
         <div class="container hero-wrap">
-          <h1 class="hero-title">
-            Эффективные решения <br />
-            для вашего бизнеса
-          </h1>
+          <div class="hero-title-wrap">
+            <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
+          </div>
           <div class="btn-wrap">
             <button type="button" class="btn-primary">Заказать услугу</button>
           </div>
